# sk-general

./: .gitignore  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/sk_general/: __init__.py
src/sk_general/data/: data_processing.py  typing.py
src/sk_general/model/: modeling.py  typing.py
src/skgen/: __init__.py
src/skgen/data/: typing.py
src/skgen/model/: modeling.py  typing.py
src/tests/data/: test_data_processing.py
src/tests/model/: test_modeling.py
