[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sk_general"
authors = [{name = "Iñigo Hidalgo", email = "inigohrey@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]

test = [
    "black",
    "flake8",
    "tox",
    "pytest",
    "pytest-cov",
    "mypy",
    "scikit-learn", # for testing functionality with simple models
]


[project.urls]
Home = "https://inigohidalgo.com/sk_general"



[tool.pytest.ini_options]
log_cli = true
log_cli_level = "warning"

[tool.mypy]
disallow_untyped_defs = true
