[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scikit-general"
authors = [{name = "Iñigo Hidalgo", email = "inigohrey@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "pandas",
    "numpy",
]
requires-python = ">=3.8"

[tool.flit.module]
name = "skgen"

# [project.optional-dependencies]
[tool.pdm.dev-dependencies]

test = [
    "black",
    "flake8",
    "tox",
    "pytest",
    "pytest-cov",
    "mypy",
    "scikit-learn", # for testing functionality with simple models
]

[tool.pdm]
version = { source = "file", path = "src/skgen/__about__.py" }

[project.urls]
Home = "https://inigohidalgo.com/sk_general"



[tool.pytest.ini_options]
log_cli = true
log_cli_level = "warning"

[tool.mypy]
disallow_incomplete_defs = true
